--- a/index.html
+++ b/index.html
@@ -24,17 +24,151 @@
 
 <body class="body-grid">
 
-	<div class="bg-secondary p-2">
-		<div class="bg-white pt-5 pb-3 pl-10 pr-7">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	<div class="bg-primary color-secondary-dark">
+		<div class="bg-white pt-4 pr-7 pb-4 pl-7 mt-4 mr-7 mb-4 ml-7">
+			<h1>Header 1</h1>
+			<h2>Header 2</h2>
+			<h3>Header 3</h3>
+			<h4>Header 4</h4>
+			<h5>Header 5</h5>
+			<p class="fsize-1 p-1"><b>fsize-1</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-2 p-1"><b>fsize-2</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-3 p-1"><b>fsize-3</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-4 p-1"><b>fsize-4</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-4 p-1">
+				<ul class="ml-6">	
+					<li class="fweight-1">fweight-1 </li>
+					<li class="fweight-2">fweight-2 </li>
+					<li class="fweight-3">fweight-3 </li>
+					<li class="fweight-4">fweight-4 </li>
+					<li class="fweight-5">fweight-5 </li>
+					<li class="fweight-6">fweight-6 </li>
+					<li class="fweight-7">fweight-7 </li>
+					<li class="fweight-8">fweight-8 </li>
+					<li class="fweight-9">fweight-9 </li>
+				</ul>
+			</p>
+			<p class="fsize-5 p-1"><b>fsize-5</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-6 p-1"><b>fsize-6</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-7 p-1"><b>fsize-7</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-8 p-1"><b>fsize-8</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-9 p-1"><b>fsize-9</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			<p class="fsize-10 p-1"><b>fsize-10</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tenetur deleniti magnam nulla aut nisi voluptatibus quisquam nobis enim temporibus ullam omnis, sequi vel, repellat iusto cumque. Reprehenderit, dolorem mollitia!</p>
+			
 		</div>
 	</div>
+
 	
-	<div class="bg-primary flex flex-x-pos-center">
-		<div class="safe-width border p-1">
-		Lorem
+	<div class="bg-tertiary flex flex-x-pos-center py-3">
+		<div class="safe-width bg-white flex flex-wrap fsize-3 p-4">
+			<div class="w-2 py-2 px-2 flex">
+				<div class="border p-2">
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam inventore numquam, nisi ipsam sint nihil itaque quos ipsum laborum illum repudiandae cum molestias! Iusto cupiditate dolor incidunt saepe ipsa odit.
+				</div>
+			</div>
+			<div class="w-3 py-2 px-2 flex">
+				<div class="border-mid p-2">
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas corporis doloribus error consectetur deserunt natus, maxime repellat fuga odit quae ea nam facilis distinctio! Dicta veritatis at iste veniam ratione.
+				</div>
+			</div>
+			<div class="w-4 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			<div class="w-3 py-2 px-2 flex">
+				<div class="border-mid p-2">
+					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas corporis doloribus error consectetur deserunt natus, maxime repellat fuga odit quae ea nam facilis distinctio! Dicta veritatis at iste veniam ratione.
+				</div>
+			</div>
+
+			<div class="w-5 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			<div class="w-7 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+
+			<div class="w-6 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			<div class="w-6 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+
+			<div class="w-8 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			<div class="w-4 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+
+			<div class="w-9 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			<div class="w-3 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+
+			<div class="w-10 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			<div class="w-2 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+
+			<div class="w-11 py-2 px-2 flex">
+				<div class="border-light p-2">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			<div class="w-1 py-2  flex">
+				<div class="border-light  fsize-1">
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
+				</div>
+			</div>
+			
 		</div>
 	</div>
+
+
+	
+	<div class="bg-secondary p-1">
+		<div class="bg-white pt-4 pr-7 pb-4 pl-7">
+			<p class="ml-0">margin-0</p>
+			<p class="ml-1">margin-1</p>
+			<p class="ml-2">margin-2</p>
+			<p class="ml-3">margin-3</p>
+			<p class="ml-4">margin-4</p>
+			<p class="ml-5">margin-5</p>
+			<p class="ml-6">margin-6</p>
+			<p class="ml-7">margin-7</p>
+			<p class="ml-8">margin-8</p>
+			<p class="ml-9">margin-9</p>
+			<p class="ml-10">margin-10</p>
+		</div>
+	</div>
+
 
 </body>
 
