--- a/index.html
+++ b/index.html
@@ -67,39 +67,39 @@
 				</div>
 			</div>
 			<div class="w-3 py-2 px-2 flex">
-				<div class="border-mid p-2">
+				<div class="border border-dotted border-w2 border-primary p-2">
 					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas corporis doloribus error consectetur deserunt natus, maxime repellat fuga odit quae ea nam facilis distinctio! Dicta veritatis at iste veniam ratione.
 				</div>
 			</div>
 			<div class="w-4 py-2 px-2 flex">
-				<div class="border-light p-2">
+				<div class="border border-dashed border-w3 border-secondary p-2">
 					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
 				</div>
 			</div>
 			<div class="w-3 py-2 px-2 flex">
-				<div class="border-mid p-2">
+				<div class="border border-double border-w4 border-tertiary p-2">
 					Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas corporis doloribus error consectetur deserunt natus, maxime repellat fuga odit quae ea nam facilis distinctio! Dicta veritatis at iste veniam ratione.
 				</div>
 			</div>
 
 			<div class="w-5 py-2 px-2 flex">
-				<div class="border-light p-2">
+				<div class="border border-w5 border-primary p-2">
 					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
 				</div>
 			</div>
 			<div class="w-7 py-2 px-2 flex">
-				<div class="border-light p-2">
+				<div class="border border-w6 border-secondary p-2">
 					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
 				</div>
 			</div>
 
 			<div class="w-6 py-2 px-2 flex">
-				<div class="border-light p-2">
+				<div class="border border-w7 border-tertiary p-2">
 					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
 				</div>
 			</div>
 			<div class="w-6 py-2 px-2 flex">
-				<div class="border-light p-2">
+				<div class="border border-w8 p-2">
 					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
 				</div>
 			</div>
@@ -143,7 +143,7 @@
 				</div>
 			</div>
 			<div class="w-1 py-2  flex">
-				<div class="border-light  fsize-1">
+				<div class="border-mid  fsize-1">
 					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem nulla quibusdam tempora, praesentium autem necessitatibus, cupiditate facilis sequi eaque neque, veritatis perferendis molestiae blanditiis quia omnis quidem harum ullam? Nostrum!
 				</div>
 			</div>
